--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 </head>
 <body>
     <div class="gallery">
-        <img src="assets/1.jpg" alt="Imagen 1" class="active">
-        <img src="assets/2.gif" alt="Imagen 2">
-        <img src="assets/3.jpg" alt="Imagen 3">
-        <img src="assets/4.jpg" alt="Imagen 4">
-        <img src="assets/5.jfif" alt="Imagen 5">
-        <img src="assets/6.jfif" alt="Imagen 6">
-        <img src="assets/7.jpg" alt="Imagen 7">
-        <img src="assets/8.jpg" alt="Imagen 8">
+        <img src="assets/1.png" alt="Imagen 1" class="active">
+        <img src="assets/2.png" alt="Imagen 2">
+        <img src="assets/3.png" alt="Imagen 3">
+        <img src="assets/4.png" alt="Imagen 4">
+        <img src="assets/5.png" alt="Imagen 5">
+        <img src="assets/6.png" alt="Imagen 6">
+        <img src="assets/7.png" alt="Imagen 7">
+        <img src="assets/8.png" alt="Imagen 8">
     </div>
     <h1>Xymena, ¿Quieres ser mi Valentín? ❤️</h1>
     <div class="buttons">
